--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 <body>
     <!-- encabezado -->
     <header>
-        <a href="./index.html"><h1>SupportCR</h1></a>
-        <i class="fa-solid fa-bars"></i>
-        <nav class="nav-menu">
-            <ul>
-                
-            </ul>
-        </nav>
+            <a href="./index.html"><h1>SupportCR</h1></a>
+            <i class="fa-solid fa-bars"></i>
     </header>
     <div class="opciones"></div>
     <main>
@@ -32,6 +27,7 @@
             <p>Los manuales los manuales los encontrara mas abajo</p>
         </div>
         <div class="manuales-presentacion">
+            <h2>Manuales</h2>
             <div class="presen">
                 <h2>Desensamble de computadoras de escritorio</h2>
             </div>
